--- a/category.html
+++ b/category.html
@@ -53,16 +53,10 @@
 
           <div class="nav">
             <div class="cross"><i class="fa-solid fa-x"></i></div>
-            <a
-              href="index.html"
-             
-              >Home
-            </a>
+            <a href="index.html" class="active">Home</a>
             <div class="about-nav hasSubMenu">
-              <a href="#"  class="active"
-                >About us &nbsp;<i class="fa-solid fa-chevron-down"></i
-              ></a>
-              <ul class="sub-menu">
+              <a href="aboutus.html">About us </a>
+              <!-- <ul class="sub-menu">
                 <li>
                   <a href="portfolio.html"><p>Portfolio</p></a>
                 </li>
@@ -72,47 +66,41 @@
                 <li>
                   <a href="category.html"><p>Industries</p></a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
-
+            <div class="about-nav"><a href="portfolio.html">Portfolio</a></div>
             <div class="services-nav hasSubMenu">
-              <a href="#"
-                >Services &nbsp;<i class="fa-solid fa-chevron-down"></i
-              ></a>
+              <a href="#">Services &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
               <div class="horizontal">
                 <!-- <div>
-                  <ul class="sub-menu-s">
-                      <li>
-                          <a href="#"><p>By Platform</p><br>
-                              <p class="small-p">Active Campaign</p><br>
-                              <p class="small-p">Keap</p><br>
-                              <p class="small-p">Ontraport</p><br>
-                              <p class="small-p" style="color: rgba(255, 95, 0, 1);">Others &nbsp; <i class="fa-solid fa-arrow-right"></i></p><br>
-                          </a>
-                      </li>
-                  </ul>
-              </div> -->
+                    <ul class="sub-menu-s">
+                        <li>
+                            <a href="#"><p>By Platform</p><br>
+                                <p class="small-p">Active Campaign</p><br>
+                                <p class="small-p">Keap</p><br>
+                                <p class="small-p">Ontraport</p><br>
+                                <p class="small-p" style="color: rgba(255, 95, 0, 1);">Others &nbsp; <i class="fa-solid fa-arrow-right"></i></p><br>
+                            </a>
+                        </li>
+                    </ul>
+                </div> -->
                 <div>
                   <ul class="sub-menu-s">
                     <li>
                       <a href="services.html"><p>Marketing Automation</p></a>
                       <br />
-                      <p class="small-p">CRM Management</p>
+                      <a href="crm.html"><p>CRM Management</p></a>
                       <br />
-                      <p class="small-p">Software Integration</p>
+                      <a href="software.html"><p>Software Integration</p></a>
                       <br />
-                      <p class="small-p">Sales Funnel and Pipelines</p>
-                      <br>
-                      <a href="services.html"><p>Web Development</p></a>
-
+                      <a href="web.html"><p>Web Development</p></a>
                     </li>
                   </ul>
                 </div>
               </div>
             </div>
-            <a href="#wrapper">FAQ</a>
+            <div class="about-nav"><a href="#wrapper">FAQ</a></div>
             <a href="#" class="mobile-cta">Book a Call</a>
-
           </div>
           <a href="#"><div class="cta">Book a Call</div></a>
         </div>
