--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             <div class="cross"><i class="fa-solid fa-x"></i></div>
             <a href="index.html" class="active">Home</a>
             <div class="about-nav hasSubMenu">
-              <a href="#">About us &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
-              <ul class="sub-menu">
+              <a href="aboutus.html">About us </a>
+              <!-- <ul class="sub-menu">
                 <li>
                   <a href="portfolio.html"><p>Portfolio</p></a>
                 </li>
@@ -79,9 +79,9 @@
                 <li>
                   <a href="category.html"><p>Industries</p></a>
                 </li>
-              </ul>
+              </ul> -->
             </div>
-
+            <div class="about-nav"><a href="portfolio.html">Portfolio</a></div>
             <div class="services-nav hasSubMenu">
               <a href="#">Services &nbsp;<i class="fa-solid fa-chevron-down"></i></a>
               <div class="horizontal">
@@ -102,19 +102,17 @@
                     <li>
                       <a href="services.html"><p>Marketing Automation</p></a>
                       <br />
-                      <p class="small-p">CRM Management</p>
+                      <a href="crm.html"><p>CRM Management</p></a>
                       <br />
-                      <p class="small-p">Software Integration</p>
+                      <a href="software.html"><p>Software Integration</p></a>
                       <br />
-                      <p class="small-p">Sales Funnel and Pipelines</p>
-                      <br>
-                      <a href="services.html"><p>Web Development</p></a>
+                      <a href="web.html"><p>Web Development</p></a>
                     </li>
                   </ul>
                 </div>
               </div>
             </div>
-            <a href="#wrapper">FAQ</a>
+            <div class="about-nav"><a href="#wrapper">FAQ</a></div>
             <a href="#" class="mobile-cta">Book a Call</a>
           </div>
           <a href="#"><div class="cta">Book a Call</div></a>
@@ -136,12 +134,12 @@
           </h5>
 
           <div class="button" data-aos="fade-up" data-aos-delay="200">
-            <div class="cta-p">
-              <a href="#"><p>Book a Call</p></a>
-            </div>
-            <div class="cta-s">
-              <a href="#"><p>Get a Demo</p></a>
-            </div>
+            <a href="#" class="cta-p">
+              <div><p>Book a Call</p></div>
+            </a> 
+            <a href="#" class="cta-s">
+              <div ><p>Get a Demo</p></div>
+            </a>
           </div>
           <div data-aos="fade-up" data-aos-delay="250">
             <div class="token">
@@ -1011,5 +1009,5 @@
 </script>
 
     
-  </body>
+</body>
 </html>
