--- a/software.html
+++ b/software.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services</title>
@@ -37,10 +37,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
     />
     <!-- stylesheet  -->
-    <link rel="stylesheet" href="services.css" />
+    <link rel="stylesheet" href="crm.css" />
     <link rel="stylesheet" href="navbar.css" />
-  </head>
-  <body>
+</head>
+<body>
     <!-- navbar  -->
     <div style="background-color: #fffaec">
       <div class="containerWrp">
@@ -121,15 +121,9 @@
       <div class="containerWrp">
         <div class="hero">
           <div>
-            <h1>Marketing Automation</h1>
+            <h1>Software integration</h1>
             <h5>
-              We are passionate marketing professional with 3 years of
-              experience in the field. I leverage my expertise to craft
-              strategic marketing campaigns that target the right audience,
-              generate leads, and achieve your business goals. Whether it's
-              crafting compelling content, optimizing your online presence, or
-              implementing data-driven strategies, I'm dedicated to helping your
-              brand thrive in today's competitive landscape.
+                We are committed to helping your business run smoothly by integrating your software systems with care and precision. Whether through custom API development or cloud-based solutions, we ensure seamless data flow and improved efficiency across all platforms, while offering continuous support to keep everything running securely and optimally.
             </h5>
             <div class="button">
               <a href="#"
@@ -138,7 +132,7 @@
             </div>
           </div>
           <div>
-            <img src="images/service-hero.png" alt="" />
+            <img src="images/soft-1.webp" alt="" />
           </div>
         </div>
       </div>
@@ -147,17 +141,16 @@
     <!-- marketing automation  -->
     <div class="containerWrp">
       <div class="automation">
-        <h3>Marketing Automation solutions we offer!</h3>
+        <h3>Software Integration solutions we offer:</h3>
 
         <div class="column">
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-1.png" alt="" /></div>
+              <div class="lft"><img src="images/soft-7" alt="" /></div>
               <div class="rght">
-                <h4>PPC Campaigns</h4>
+                <h4>Custom Integration Solutions</h4>
                 <h5>
-                  PPC, or Pay-per-Click, could give you the edge you need to
-                  boost traffic, leads, conversions and revenue.
+                    We design and implement tailored software integrations that ensure seamless communication between your systems, improving workflow efficiency.
                 </h5>
               </div>
             </div>
@@ -166,13 +159,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-2.png" alt="" /></div>
+              <div class="lft"><img src="images/soft-3" alt="" /></div>
               <div class="rght">
-                <h4>Data-Driven Results</h4>
+                <h4>API Development & Integration</h4>
                 <h5>
-                  No two PPC campaigns are the same, that's why we create
-                  bespoke ads to help organisations of all sizes meet their
-                  business goals.
+                    Whether connecting third-party services or building custom APIs, we ensure data flows smoothly between platforms, enhancing functionality and performance.
                 </h5>
               </div>
             </div>
@@ -181,12 +172,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-3.png" alt="" /></div>
+              <div class="lft"><img src="images/soft-4" alt="" /></div>
               <div class="rght">
-                <h4>Keyword Research & Strategy</h4>
+                <h4>Cloud Integration</h4>
                 <h5>
-                  This foundational step ensures your ads appear to the most
-                  relevant users, increasing click-through rates.
+                    We specialize in integrating cloud-based systems to streamline operations, enabling real-time access to your data across any device or location.
                 </h5>
               </div>
             </div>
@@ -195,13 +185,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-4.png" alt="" /></div>
+              <div class="lft"><img src="images/soft-5" alt="" /></div>
               <div class="rght">
-                <h4>Ad Copywriting & Design</h4>
+                <h4>ERP & CRM Integration </h4>
                 <h5>
-                  Creating compelling ad copy and visually engaging designs is
-                  key to making your ads stand out - our team crafts messages
-                  that resonate with.
+                    Maximize your business potential by integrating your ERP and CRM systems, allowing better customer insights and more effective operational management.
                 </h5>
               </div>
             </div>
@@ -210,13 +198,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-5.png" alt="" /></div>
+              <div class="lft"><img src="images/soft-6" alt="" /></div>
               <div class="rght">
-                <h4>Landing Page Optimization</h4>
+                <h4>Data Migration & Syncing</h4>
                 <h5>
-                  To maximize conversions, we optimize landing pages that your
-                  ads point to, ensuring a seamless user experience from click
-                  to conversion.
+                    We provide secure data migration and synchronization services, ensuring your information is accurately transferred and kept up-to-date across all platforms.
                 </h5>
               </div>
             </div>
@@ -225,14 +211,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-6.png" alt="" /></div>
+              <div class="lft"><img src="images/soft-2" alt="" /></div>
               <div class="rght">
-                <h4>Performance Monitoring</h4>
+                <h4>Security & Compliance</h4>
                 <h5>
-                  Rigorous monitoring and analysis of your campaign's
-                  performance is a must! <br />
-                  We use data-driven insights to refine and adjust strategies,
-                  ensuring your PPC
+                    Our integration services prioritize security, ensuring your systems are compliant with industry standards and protect sensitive data at every step.
                 </h5>
               </div>
             </div>
@@ -268,19 +251,18 @@
     <!-- number section  -->
     <div class="containerWrp">
       <div class="number">
-        <h3>Numbers that define our Marketing Automation expertise!</h3>
+        <h3>Numbers that define our Software Integration expertise!</h3>
 
         <div class="box">
           <div>
             <h1>40%</h1>
             <h5>
-              The unique brand identity we designed for Onelink led to a higher
-              customer retention rate!
+                A custom integration solution helped our client, DEF Logistics, increase operational efficiency by 40%!
             </h5>
           </div>
           <div>
-            <h1>+40%</h1>
-            <h5>Increased habitual users!</h5>
+            <h1>30%</h1>
+            <h5>Our ERP & CRM integration helped a major retail chain reduce manual data entry time by 30%, increasing overall productivity!</h5>
           </div>
         </div>
       </div>
@@ -741,128 +723,128 @@
         <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
-<script>
-  $(document).ready(function () {
-    $(".testimonialSlider").slick({
-      dots: true,
-      infinite: true,
-      speed: 300,
-      slidesToShow: 4,
-      adaptiveHeight: true,
-      autoplay: true,
-      autoplaySpeed: 1000,
-      responsive: [
-        {
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            infinite: true,
-            dots: true,
-          },
-        },
-        {
-          breakpoint: 600,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2,
-          },
-        },
-      ],
-    });
+    <script>
+    $(document).ready(function () {
+        $(".testimonialSlider").slick({
+        dots: true,
+        infinite: true,
+        speed: 300,
+        slidesToShow: 4,
+        adaptiveHeight: true,
+        autoplay: true,
+        autoplaySpeed: 1000,
+        responsive: [
+            {
+            breakpoint: 1024,
+            settings: {
+                slidesToShow: 3,
+                slidesToScroll: 3,
+                infinite: true,
+                dots: true,
+            },
+            },
+            {
+            breakpoint: 600,
+            settings: {
+                slidesToShow: 2,
+                slidesToScroll: 2,
+            },
+            },
+        ],
+        });
 
-    const hamburgerMenu = $(".hamburger-menu");
-    const nav = $(".nav");
+        const hamburgerMenu = $(".hamburger-menu");
+        const nav = $(".nav");
 
-    // Function to open the menu
-    function openMenu() {
-      if (!nav.hasClass("show")) {
-        nav.addClass("show");
+        // Function to open the menu
+        function openMenu() {
+        if (!nav.hasClass("show")) {
+            nav.addClass("show");
+            nav.animate(
+            {
+                right: "0",
+            },
+            {
+                duration: 300,
+                easing: "swing", // Adjust as needed
+            }
+            );
+        }
+        }
+
+        // Function to close the menu
+        function closeMenu() {
         nav.animate(
-          {
-            right: "0",
-          },
-          {
+            {
+            right: "-100%",
+            },
+            {
             duration: 300,
             easing: "swing", // Adjust as needed
-          }
+            complete: function () {
+                nav.removeClass("show");
+            },
+            }
         );
-      }
-    }
-
-    // Function to close the menu
-    function closeMenu() {
-      nav.animate(
-        {
-          right: "-100%",
-        },
-        {
-          duration: 300,
-          easing: "swing", // Adjust as needed
-          complete: function () {
-            nav.removeClass("show");
-          },
         }
-      );
-    }
 
-    // Toggle menu on hamburger click
-    hamburgerMenu.click(function (event) {
-      event.stopPropagation(); // Prevent click from propagating to the document
-      if (!nav.hasClass("show")) {
-        openMenu();
-      } else {
+        // Toggle menu on hamburger click
+        hamburgerMenu.click(function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
+        if (!nav.hasClass("show")) {
+            openMenu();
+        } else {
+            closeMenu();
+        }
+        });
+
+        // Close menu if clicked outside of the nav
+        $(document).click(function (event) {
+        if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+            closeMenu();
+        }
+        });
+
+        // Prevent click event from closing the menu when clicking inside the nav
+        nav.click(function (event) {
+        event.stopPropagation();
+        });
+    });
+    </script>
+
+    <script>
+    document.querySelectorAll(".question").forEach((item) => {
+        item.addEventListener("click", function () {
+        this.classList.toggle("active");
+        const answer = this.nextElementSibling;
+        answer.style.display = answer.style.display === "block" ? "none" : "block";
+        answer.classList.toggle("show");
+        });
+    });
+    </script>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const nav = document.querySelector('.nav');
+        const cross = document.querySelector('.cross');
+
+        // Function to close the menu
+        function closeMenu() {
+        nav.style.right = '-100%';
+        nav.classList.remove('show');
+        }
+
+        // Add click event listener to the cross button
+        cross.addEventListener('click', function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
         closeMenu();
-      }
+        });
     });
-
-    // Close menu if clicked outside of the nav
-    $(document).click(function (event) {
-      if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
-        closeMenu();
-      }
-    });
-
-    // Prevent click event from closing the menu when clicking inside the nav
-    nav.click(function (event) {
-      event.stopPropagation();
-    });
-  });
-</script>
-
-<script>
-  document.querySelectorAll(".question").forEach((item) => {
-    item.addEventListener("click", function () {
-      this.classList.toggle("active");
-      const answer = this.nextElementSibling;
-      answer.style.display = answer.style.display === "block" ? "none" : "block";
-      answer.classList.toggle("show");
-    });
-  });
-</script>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const nav = document.querySelector('.nav');
-    const cross = document.querySelector('.cross');
-
-    // Function to close the menu
-    function closeMenu() {
-      nav.style.right = '-100%';
-      nav.classList.remove('show');
-    }
-
-    // Add click event listener to the cross button
-    cross.addEventListener('click', function (event) {
-      event.stopPropagation(); // Prevent click from propagating to the document
-      closeMenu();
-    });
-  });
-</script>
+    </script>
     
     
-  </body>
+</body>
 </html>
