--- a/crm.html
+++ b/crm.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Services</title>
@@ -37,10 +37,10 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
     />
     <!-- stylesheet  -->
-    <link rel="stylesheet" href="services.css" />
+    <link rel="stylesheet" href="crm.css" />
     <link rel="stylesheet" href="navbar.css" />
-  </head>
-  <body>
+</head>
+<body>
     <!-- navbar  -->
     <div style="background-color: #fffaec">
       <div class="containerWrp">
@@ -121,15 +121,14 @@
       <div class="containerWrp">
         <div class="hero">
           <div>
-            <h1>Marketing Automation</h1>
+            <h1>CRM Management</h1>
             <h5>
-              We are passionate marketing professional with 3 years of
-              experience in the field. I leverage my expertise to craft
-              strategic marketing campaigns that target the right audience,
-              generate leads, and achieve your business goals. Whether it's
-              crafting compelling content, optimizing your online presence, or
-              implementing data-driven strategies, I'm dedicated to helping your
-              brand thrive in today's competitive landscape.
+                We are dedicated CRM management professionals with a strong track record in helping businesses build
+                lasting customer relationships. With over 3 years of experience, we specialize in designing and optimizing
+                CRM systems that streamline your operations, enhance customer engagement, and drive growth. From personalized
+                communication strategies to data-driven insights, our goal is to empower your team with the tools and processes 
+                needed to nurture leads, improve retention, and exceed customer expectations. Let us help you transform your 
+                customer interactions into meaningful, long-term connections.
             </h5>
             <div class="button">
               <a href="#"
@@ -138,7 +137,7 @@
             </div>
           </div>
           <div>
-            <img src="images/service-hero.png" alt="" />
+            <img src="images/crm-1" alt="" />
           </div>
         </div>
       </div>
@@ -147,17 +146,17 @@
     <!-- marketing automation  -->
     <div class="containerWrp">
       <div class="automation">
-        <h3>Marketing Automation solutions we offer!</h3>
+        <h3>CRM Management solutions we offer:</h3>
 
         <div class="column">
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-1.png" alt="" /></div>
+              <div class="lft"><img src="https://www.tableau.com/sites/default/files/2022-09/CRM_Analytics_Hero.png" alt="" /></div>
               <div class="rght">
-                <h4>PPC Campaigns</h4>
+                <h4>Custom CRM Implementation</h4>
                 <h5>
-                  PPC, or Pay-per-Click, could give you the edge you need to
-                  boost traffic, leads, conversions and revenue.
+                    We design and implement tailored CRM systems that align with your
+                    business needs, ensuring seamless integration with your existing processes.
                 </h5>
               </div>
             </div>
@@ -166,13 +165,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-2.png" alt="" /></div>
+              <div class="lft"><img src="images/crm-6" alt="" /></div>
               <div class="rght">
-                <h4>Data-Driven Results</h4>
+                <h4>Customer Retention Strategies</h4>
                 <h5>
-                  No two PPC campaigns are the same, that's why we create
-                  bespoke ads to help organisations of all sizes meet their
-                  business goals.
+                    Implement proactive strategies to enhance customer retention, from personalized marketing to timely follow-ups, helping to reduce churn and foster long-term relationships.
                 </h5>
               </div>
             </div>
@@ -181,12 +178,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-3.png" alt="" /></div>
+              <div class="lft"><img src="images/crm-2" alt="" /></div>
               <div class="rght">
-                <h4>Keyword Research & Strategy</h4>
+                <h4>Customer Segmentation & Personalization</h4>
                 <h5>
-                  This foundational step ensures your ads appear to the most
-                  relevant users, increasing click-through rates.
+                    We help you categorize your customers based on behavior, preferences, and demographics, enabling personalized communication that drives engagement and loyalty.
                 </h5>
               </div>
             </div>
@@ -195,13 +191,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-4.png" alt="" /></div>
+              <div class="lft"><img src="images/crm-3" alt="" /></div>
               <div class="rght">
-                <h4>Ad Copywriting & Design</h4>
+                <h4>Automated Customer Workflows </h4>
                 <h5>
-                  Creating compelling ad copy and visually engaging designs is
-                  key to making your ads stand out - our team crafts messages
-                  that resonate with.
+                    Streamline your customer journey with automated workflows, from lead nurturing to post-sale follow-ups, improving efficiency and customer satisfaction.
                 </h5>
               </div>
             </div>
@@ -210,13 +204,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-5.png" alt="" /></div>
+              <div class="lft"><img src="images/crm-4.webp" alt="" /></div>
               <div class="rght">
-                <h4>Landing Page Optimization</h4>
+                <h4>Data Management & Analysis</h4>
                 <h5>
-                  To maximize conversions, we optimize landing pages that your
-                  ads point to, ensuring a seamless user experience from click
-                  to conversion.
+                    Organize and maintain a clean, centralized database of customer information, while leveraging data analytics to make informed decisions that boost sales and retention.
                 </h5>
               </div>
             </div>
@@ -225,14 +217,11 @@
 
           <div>
             <div class="section">
-              <div class="lft"><img src="images/service-6.png" alt="" /></div>
+              <div class="lft"><img src="images/crm-5" alt="" /></div>
               <div class="rght">
-                <h4>Performance Monitoring</h4>
+                <h4>Lead Tracking & Management</h4>
                 <h5>
-                  Rigorous monitoring and analysis of your campaign's
-                  performance is a must! <br />
-                  We use data-driven insights to refine and adjust strategies,
-                  ensuring your PPC
+                    Our CRM solutions ensure you never miss an opportunity by tracking, scoring, and managing leads effectively, turning prospects into loyal customers.
                 </h5>
               </div>
             </div>
@@ -268,19 +257,18 @@
     <!-- number section  -->
     <div class="containerWrp">
       <div class="number">
-        <h3>Numbers that define our Marketing Automation expertise!</h3>
+        <h3>Numbers that define our CRM Management expertise!</h3>
 
         <div class="box">
           <div>
-            <h1>40%</h1>
+            <h1>+50%</h1>
             <h5>
-              The unique brand identity we designed for Onelink led to a higher
-              customer retention rate!
+                Enhanced customer segmentation and personalized communication led to a 50% boost in customer retention rates!
             </h5>
           </div>
           <div>
-            <h1>+40%</h1>
-            <h5>Increased habitual users!</h5>
+            <h1>25%</h1>
+            <h5>Our optimized lead tracking system reduced response time by 25%, helping our clients close deals faster!</h5>
           </div>
         </div>
       </div>
@@ -741,128 +729,128 @@
         <p>2024 © Nusanse. All Rights Reserved.</p>
       </div>
     </footer>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
 
-<script>
-  $(document).ready(function () {
-    $(".testimonialSlider").slick({
-      dots: true,
-      infinite: true,
-      speed: 300,
-      slidesToShow: 4,
-      adaptiveHeight: true,
-      autoplay: true,
-      autoplaySpeed: 1000,
-      responsive: [
-        {
-          breakpoint: 1024,
-          settings: {
-            slidesToShow: 3,
-            slidesToScroll: 3,
-            infinite: true,
-            dots: true,
-          },
-        },
-        {
-          breakpoint: 600,
-          settings: {
-            slidesToShow: 2,
-            slidesToScroll: 2,
-          },
-        },
-      ],
-    });
+    <script>
+    $(document).ready(function () {
+        $(".testimonialSlider").slick({
+        dots: true,
+        infinite: true,
+        speed: 300,
+        slidesToShow: 4,
+        adaptiveHeight: true,
+        autoplay: true,
+        autoplaySpeed: 1000,
+        responsive: [
+            {
+            breakpoint: 1024,
+            settings: {
+                slidesToShow: 3,
+                slidesToScroll: 3,
+                infinite: true,
+                dots: true,
+            },
+            },
+            {
+            breakpoint: 600,
+            settings: {
+                slidesToShow: 2,
+                slidesToScroll: 2,
+            },
+            },
+        ],
+        });
 
-    const hamburgerMenu = $(".hamburger-menu");
-    const nav = $(".nav");
+        const hamburgerMenu = $(".hamburger-menu");
+        const nav = $(".nav");
 
-    // Function to open the menu
-    function openMenu() {
-      if (!nav.hasClass("show")) {
-        nav.addClass("show");
+        // Function to open the menu
+        function openMenu() {
+        if (!nav.hasClass("show")) {
+            nav.addClass("show");
+            nav.animate(
+            {
+                right: "0",
+            },
+            {
+                duration: 300,
+                easing: "swing", // Adjust as needed
+            }
+            );
+        }
+        }
+
+        // Function to close the menu
+        function closeMenu() {
         nav.animate(
-          {
-            right: "0",
-          },
-          {
+            {
+            right: "-100%",
+            },
+            {
             duration: 300,
             easing: "swing", // Adjust as needed
-          }
+            complete: function () {
+                nav.removeClass("show");
+            },
+            }
         );
-      }
-    }
-
-    // Function to close the menu
-    function closeMenu() {
-      nav.animate(
-        {
-          right: "-100%",
-        },
-        {
-          duration: 300,
-          easing: "swing", // Adjust as needed
-          complete: function () {
-            nav.removeClass("show");
-          },
         }
-      );
-    }
 
-    // Toggle menu on hamburger click
-    hamburgerMenu.click(function (event) {
-      event.stopPropagation(); // Prevent click from propagating to the document
-      if (!nav.hasClass("show")) {
-        openMenu();
-      } else {
+        // Toggle menu on hamburger click
+        hamburgerMenu.click(function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
+        if (!nav.hasClass("show")) {
+            openMenu();
+        } else {
+            closeMenu();
+        }
+        });
+
+        // Close menu if clicked outside of the nav
+        $(document).click(function (event) {
+        if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
+            closeMenu();
+        }
+        });
+
+        // Prevent click event from closing the menu when clicking inside the nav
+        nav.click(function (event) {
+        event.stopPropagation();
+        });
+    });
+    </script>
+
+    <script>
+    document.querySelectorAll(".question").forEach((item) => {
+        item.addEventListener("click", function () {
+        this.classList.toggle("active");
+        const answer = this.nextElementSibling;
+        answer.style.display = answer.style.display === "block" ? "none" : "block";
+        answer.classList.toggle("show");
+        });
+    });
+    </script>
+
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const nav = document.querySelector('.nav');
+        const cross = document.querySelector('.cross');
+
+        // Function to close the menu
+        function closeMenu() {
+        nav.style.right = '-100%';
+        nav.classList.remove('show');
+        }
+
+        // Add click event listener to the cross button
+        cross.addEventListener('click', function (event) {
+        event.stopPropagation(); // Prevent click from propagating to the document
         closeMenu();
-      }
+        });
     });
-
-    // Close menu if clicked outside of the nav
-    $(document).click(function (event) {
-      if (nav.hasClass("show") && !nav.is(event.target) && !nav.has(event.target).length) {
-        closeMenu();
-      }
-    });
-
-    // Prevent click event from closing the menu when clicking inside the nav
-    nav.click(function (event) {
-      event.stopPropagation();
-    });
-  });
-</script>
-
-<script>
-  document.querySelectorAll(".question").forEach((item) => {
-    item.addEventListener("click", function () {
-      this.classList.toggle("active");
-      const answer = this.nextElementSibling;
-      answer.style.display = answer.style.display === "block" ? "none" : "block";
-      answer.classList.toggle("show");
-    });
-  });
-</script>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function () {
-    const nav = document.querySelector('.nav');
-    const cross = document.querySelector('.cross');
-
-    // Function to close the menu
-    function closeMenu() {
-      nav.style.right = '-100%';
-      nav.classList.remove('show');
-    }
-
-    // Add click event listener to the cross button
-    cross.addEventListener('click', function (event) {
-      event.stopPropagation(); // Prevent click from propagating to the document
-      closeMenu();
-    });
-  });
-</script>
+    </script>
     
     
-  </body>
+</body>
 </html>
