--- a/index.html
+++ b/index.html
@@ -753,7 +753,7 @@
             </button>
             <div class="answer">
               <p>
-                <br>As part of your concierge service membership, you receive speed and security-optimized hosting for your WordPress websites.
+                As part of your concierge service membership, you receive speed and security-optimized hosting for your WordPress websites.
                 <br>While you are not required to use our hosting, we can work with any host that provides us with FTP access and a control panel (typically CPanel or Plesk) for changing settings and accessing your database.
                 <br>If you are considering changing hosts and either do not qualify for our hosting or prefer not to use it, we recommend the following WordPress hosts:
                 <br><b>Budget-Friendly Option:</b>
