--- a/aboutus.html
+++ b/aboutus.html
@@ -275,7 +275,7 @@
           <div class="tab active" id="tab1">
             <h3 class="orange-1">Transparent</h3>
             <img src="images/ab-4.png" alt="" />
-            <h3 class="orange-2">Communication</h3>
+            <h3 class="orange-2" id="one">Communication</h3>
             <h5>
               We prioritize open dialogue, ensuring clients are informed at
               every turn. Our clear communication fosters trust and alignment,
@@ -285,7 +285,7 @@
           <div class="tab" id="tab2">
             <h3 class="orange-1">Precision</h3>
             <img src="images/ab-5.png" alt="" />
-            <h3 class="orange-2">Management</h3>
+            <h3 class="orange-2" id="two">Management</h3>
             <h5>
               Our meticulous planning and execution ensure project success. Deadlines are met, 
               objectives achieved, and complexities managed seamlessly, guaranteeing client satisfaction.
@@ -294,7 +294,7 @@
           <div class="tab" id="tab3">
             <h3 class="orange-1">Meticulous</h3>
             <img src="images/ab-6.png" alt="" />
-            <h3 class="orange-2">Detail</h3>
+            <h3 class="orange-2" id="three">Detail</h3>
             <h5>
               We obsess over details, perfecting design elements to deliver exceptional outcomes. From 
               aesthetics to functionality, our dedication shines through in every pixel.
@@ -303,7 +303,7 @@
           <div class="tab" id="tab4">
             <h3 class="orange-1">Innovative</h3>
             <img src="images/ab-7.png" alt="" />
-            <h3 class="orange-2">Excellence</h3>
+            <h3 class="orange-2" id="four">Excellence</h3>
             <h5>
               We thrive on innovation, pushing creative boundaries. By blending cutting-edge trends 
               and strategic insights, we consistently deliver designs that stand at the forefront of excellence.
