--- a/aboutus.html
+++ b/aboutus.html
@@ -145,7 +145,7 @@
         <div class="container">
           <div>
             <h5>
-              Abdullah had a vision of building a business that allowed him
+              Our CEO had a vision of building a business that allowed him
               freedom to enjoy the things life has to offer. His path to
               realizing this dream was unique as he explored many avenues - from
               IT to life and business coaching to selling courses and marketing.
@@ -196,19 +196,19 @@
 
           <div class="block" style="gap: 82px">
             <div class="num">
-              <h1>3y+</h1>
+              <h1>2y+</h1>
               <h5>Agency Experience</h5>
             </div>
             <div class="rght">
               <p>
-                We've had quite a run in our 3+ years of operation with
+                We've had quite a run in our 2+ years of operation with
                 successful project launches across all over the world
               </p>
             </div>
           </div>
           <div class="hr"></div>
 
-          <div class="block" style="gap: 36px">
+          <!-- <div class="block" style="gap: 36px">
             <div class="num">
               <h1>$5M+</h1>
               <h5>Accumulated over $5M</h5>
@@ -219,7 +219,7 @@
                 accumulated over $5M.
               </p>
             </div>
-          </div>
+          </div> -->
           <div class="hr"></div>
         </div>
       </div>
@@ -422,7 +422,7 @@
             <div id="m">
               <h4 id="foot-h">Resources</h4>
               <p id="foot-p">Book A Call</p>
-              <p id="foot-p">Watch Demo</p>
+              <!-- <p id="foot-p">Watch Demo</p> -->
               <a href="portfolio.html">
                 <p id="foot-p">Portfolio</p>
               </a>
