--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
           <div class="desc" data-aos="fade-up">
             <h3>Software integration</h3>
             <h5>
-              We are skilled software integration specialist, adept at streamlining workflows by connecting disparate applications. With years of experience, we understand the importance of seamless data flow and efficient communication between your business tools. We can help you identify the most suitable integration methods, configure systems for optimal performance, and ensure smooth data exchange. Our focus lies on minimising disruptions and maximising the efficiency of your software ecosystem, allowing your business to operate at its full potential.
+              We are skilled software integration specialists, adept at streamlining workflows by connecting disparate applications. With years of experience, we understand the importance of seamless data flow and efficient communication between your business tools. We can help you identify the most suitable integration methods, configure systems for optimal performance, and ensure smooth data exchange. Our focus lies on minimising disruptions and maximising the efficiency of your software ecosystem, allowing your business to operate at its full potential.
             </h5>
             <!-- <a href="#"
               ><div class="learn-more">
@@ -673,11 +673,11 @@
             <div class="answer">
               <p>
                 At Nusance, we can assist you with switching to one of the platforms we support, such as Infusionsoft, Ontraport, or ActiveCampaign.
-                <br> Level of Assistance: <br>
+                <br> <b>Level of Assistance:</b> <br>
                 The complexity of the migration will determine the level of assistance we can provide.
-                <br> Single Task: <br>
+                <br> <b>Single Task:</b> <br>
                 If you need to migrate contacts from one system (e.g., Mailchimp) to another (e.g., Ontraport), this can typically be classified as a single task.
-                <br> Complex Project: <br>
+                <br> <b>Complex Project:</b> <br>
                 If you need to migrate webforms, automations, and other history, this process is more complex. <br>
                 This would be considered a project composed of multiple tasks, including: <br>
                 Importing contacts <br>
@@ -739,7 +739,7 @@
             </button>
             <div class="answer">
               <p>
-                Yes we can do video editing and graphic designing.
+                Yes. In Nusanse, we do video editing and graphic designing.
               </p>
             </div>
           </div>
@@ -830,7 +830,7 @@
             <div id="m">
               <h4 id="foot-h">Resources</h4>
               <p id="foot-p">Book A Call</p>
-              <p id="foot-p">Watch Demo</p>
+              <!-- <p id="foot-p">Watch Demo</p> -->
               <a href="portfolio.html">
                 <p id="foot-p">Portfolio</p>
               </a>
