--- a/p_inner3.html
+++ b/p_inner3.html
@@ -305,7 +305,7 @@ We digitized and optimized the company's business processes by providing user-fr
               <div id="m">
                 <h4 id="foot-h">Resources</h4>
                 <p id="foot-p">Book A Call</p>
-                <p id="foot-p">Watch Demo</p>
+                <!-- <p id="foot-p">Watch Demo</p> -->
                 <a href="portfolio.html">
                   <p id="foot-p">Portfolio</p>
                 </a>
