--- a/services.html
+++ b/services.html
@@ -725,7 +725,7 @@
             <div id="m">
               <h4 id="foot-h">Resources</h4>
               <p id="foot-p">Book A Call</p>
-              <p id="foot-p">Watch Demo</p>
+              <!-- <p id="foot-p">Watch Demo</p> -->
               <a href="portfolio.html">
                 <p id="foot-p">Portfolio</p>
               </a>
